Fix Contact column header alignment in Main View
- Changed .col-name width from 250px to 270px to match .name-group

--- a/web/static/css/main_view.css
+++ b/web/static/css/main_view.css
@@ -440,7 +440,7 @@ body.tutti-frutti .nav-btn.peach:hover {
 }
 
 .col-name { 
-    width: 250px; 
+    width: 270px; 
     flex-shrink: 0; 
     margin-right: 1rem;
 }
